@@ -15,6 +15,8 @@ import Prelude ()
 import Distribution.Compat.Prelude
 
 import Distribution.Compat.Exception
+
+#ifndef mingw32_HOST_OS
 import Distribution.Compat.Internal.TempFile
 
 import Control.Exception
@@ -25,20 +27,36 @@ import System.IO.Error
 import System.Directory
          ( doesFileExist, renameFile, removeFile )
 import System.FilePath
-         ( takeDirectory )
+         ( isRelative, normalise )
 import System.IO
          ( IOMode(ReadMode), hClose, hGetBuf, hPutBuf, hFileSize
          , withBinaryFile )
 import Foreign
          ( allocaBytes )
 
-#ifndef mingw32_HOST_OS
 import System.Posix.Types
          ( FileMode )
 import System.Posix.Internals
          ( c_chmod, withFilePath )
 import Foreign.C
          ( throwErrnoPathIfMinus1_ )
+
+#else /* else mingw32_HOST_OS */
+
+import Control.Exception
+  ( throwIO )
+import qualified Data.ByteString.Lazy as BSL
+import System.IO.Error
+  ( ioeSetLocation )
+import System.Directory
+  ( doesFileExist )
+import System.FilePath
+  ( isRelative, normalise )
+import System.IO
+  ( IOMode(ReadMode), hFileSize
+  , withBinaryFile )
+
+import qualified System.Win32.File as Win32 ( copyFile )
 #endif /* mingw32_HOST_OS */
 
 copyOrdinaryFile, copyExecutableFile :: FilePath -> FilePath -> NoCallStackIO ()
@@ -67,22 +85,29 @@ copyFile :: FilePath -> FilePath -> NoCallStackIO ()
 copyFile fromFPath toFPath =
   copy
     `catchIO` (\ioe -> throwIO (ioeSetLocation ioe "copyFile"))
-    where copy = withBinaryFile fromFPath ReadMode $ \hFrom ->
-                 bracketOnError openTmp cleanTmp $ \(tmpFPath, hTmp) ->
-                 do allocaBytes bufferSize $ copyContents hFrom hTmp
-                    hClose hTmp
-                    renameFile tmpFPath toFPath
-          openTmp = openBinaryTempFile (takeDirectory toFPath) ".copyFile.tmp"
-          cleanTmp (tmpFPath, hTmp) = do
-            hClose hTmp          `catchIO` \_ -> return ()
-            removeFile tmpFPath  `catchIO` \_ -> return ()
-          bufferSize = 4096
+    where
+#ifndef mingw32_HOST_OS
+      copy = withBinaryFile fromFPath ReadMode $ \hFrom ->
+             bracketOnError openTmp cleanTmp $ \(tmpFPath, hTmp) ->
+             do allocaBytes bufferSize $ copyContents hFrom hTmp
+                hClose hTmp
+                renameFile tmpFPath toFPath
+      openTmp = openBinaryTempFile (takeDirectory toFPath) ".copyFile.tmp"
+      cleanTmp (tmpFPath, hTmp) = do
+        hClose hTmp          `catchIO` \_ -> return ()
+        removeFile tmpFPath  `catchIO` \_ -> return ()
+      bufferSize = 4096
 
-          copyContents hFrom hTo buffer = do
-                  count <- hGetBuf hFrom buffer bufferSize
-                  when (count > 0) $ do
-                          hPutBuf hTo buffer count
-                          copyContents hFrom hTo buffer
+      copyContents hFrom hTo buffer = do
+              count <- hGetBuf hFrom buffer bufferSize
+              when (count > 0) $ do
+                      hPutBuf hTo buffer count
+                      copyContents hFrom hTo buffer
+#else
+      copy = Win32.copyFile (toExtendedLengthPath fromFPath)
+                            (toExtendedLengthPath toFPath)
+                            False
+#endif /* mingw32_HOST_OS */
 
 -- | Like `copyFile`, but does not touch the target if source and destination
 -- are already byte-identical. This is recommended as it is useful for
@@ -110,3 +135,19 @@ filesEqual f1 f2 = do
             c1 <- BSL.hGetContents h1
             c2 <- BSL.hGetContents h2
             return $! c1 == c2
+
+-- NOTE: Shamelessly lifted from System.Directory.Internal.Windows
+
+-- | Add the @"\\\\?\\"@ prefix if necessary or possible.  The path remains
+-- unchanged if the prefix is not added.  This function can sometimes be used
+-- to bypass the @MAX_PATH@ length restriction in Windows API calls.
+toExtendedLengthPath :: FilePath -> FilePath
+toExtendedLengthPath path
+  | isRelative path = path
+  | otherwise =
+      case normalise path of
+        '\\' : '?'  : '?' : '\\' : _ -> path
+        '\\' : '\\' : '?' : '\\' : _ -> path
+        '\\' : '\\' : '.' : '\\' : _ -> path
+        '\\' : subpath@('\\' : _) -> "\\\\?\\UNC" <> subpath
+        normalisedPath -> "\\\\?\\" <> normalisedPath
